--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start:dev": "nodemon -I --exec node --no-warnings --experimental-specifier-resolution=node  --loader ts-node/esm ./src/index.ts",
     "start:multi": "nodemon -I --exec node --no-warnings --experimental-specifier-resolution=node  --loader ts-node/esm ./src/multi.ts ",
     "lint": "npx eslint ./src",
-    "format": "npx eslint ./src --fix"
+    "format": "npx eslint ./src --fix",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +31,7 @@
     "nodemon": "^3.0.3",
     "prettier": "^3.2.5",
     "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
